@@ -25,6 +25,7 @@ import cpw.mods.fml.relauncher.Side;
 public class BlockStainedLeaf extends BlockLeaves {
 
     private Icon[] icon = new Icon[2];
+    int[] adjacentTreeBlocks;
 
     public BlockStainedLeaf(int ID) {
         super(ID);
@@ -91,15 +92,108 @@ public class BlockStainedLeaf extends BlockLeaves {
     protected ItemStack createStackedBlock(int par1) {
         return new ItemStack(blockID, 1, par1);
     }
+    
+    @Override
+    public void updateTick(World w, int x, int y, int z, Random r) {
+        if (!w.isRemote) {
+            int l = w.getBlockMetadata(x, y, z);
+
+            if (r.nextInt(3) == 0) {
+                byte b0 = 4;
+                int i1 = b0 + 1;
+                byte b1 = 32;
+                int j1 = b1 * b1;
+                int k1 = b1 / 2;
+
+                if (this.adjacentTreeBlocks == null) {
+                    this.adjacentTreeBlocks = new int[b1 * b1 * b1];
+                }
+
+                int l1;
+
+                if (w.checkChunksExist(x - i1, y - i1, z - i1, x + i1, y + i1, z + i1)) {
+                    int i2;
+                    int j2;
+                    int k2;
+
+                    for (l1 = -b0; l1 <= b0; ++l1) {
+                        for (i2 = -b0; i2 <= b0; ++i2) {
+                            for (j2 = -b0; j2 <= b0; ++j2) {
+                                k2 = w.getBlockId(x + l1, y + i2, z + j2);
+
+                                Block block = Block.blocksList[k2];
+
+                                if (block != null && block.canSustainLeaves(w, x + l1, y + i2, z + j2)) {
+                                    this.adjacentTreeBlocks[(l1 + k1) * j1 + (i2 + k1) * b1 + j2 + k1] = 0;
+                                } else if (block != null && block.isLeaves(w, x + l1, y + i2, z + j2)) {
+                                    this.adjacentTreeBlocks[(l1 + k1) * j1 + (i2 + k1) * b1 + j2 + k1] = -2;
+                                } else {
+                                    this.adjacentTreeBlocks[(l1 + k1) * j1 + (i2 + k1) * b1 + j2 + k1] = -1;
+                                }
+                            }
+                        }
+                    }
+
+                    for (l1 = 1; l1 <= 4; ++l1) {
+                        for (i2 = -b0; i2 <= b0; ++i2) {
+                            for (j2 = -b0; j2 <= b0; ++j2) {
+                                for (k2 = -b0; k2 <= b0; ++k2) {
+                                    if (this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1) * b1 + k2 + k1] == l1 - 1) {
+                                        if (this.adjacentTreeBlocks[(i2 + k1 - 1) * j1 + (j2 + k1) * b1 + k2 + k1] == -2) {
+                                            this.adjacentTreeBlocks[(i2 + k1 - 1) * j1 + (j2 + k1) * b1 + k2 + k1] = l1;
+                                        }
+
+                                        if (this.adjacentTreeBlocks[(i2 + k1 + 1) * j1 + (j2 + k1) * b1 + k2 + k1] == -2) {
+                                            this.adjacentTreeBlocks[(i2 + k1 + 1) * j1 + (j2 + k1) * b1 + k2 + k1] = l1;
+                                        }
+
+                                        if (this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1 - 1) * b1 + k2 + k1] == -2) {
+                                            this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1 - 1) * b1 + k2 + k1] = l1;
+                                        }
+
+                                        if (this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1 + 1) * b1 + k2 + k1] == -2) {
+                                            this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1 + 1) * b1 + k2 + k1] = l1;
+                                        }
+
+                                        if (this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1) * b1 + (k2 + k1 - 1)] == -2) {
+                                            this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1) * b1 + (k2 + k1 - 1)] = l1;
+                                        }
+
+                                        if (this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1) * b1 + k2 + k1 + 1] == -2) {
+                                            this.adjacentTreeBlocks[(i2 + k1) * j1 + (j2 + k1) * b1 + k2 + k1 + 1] = l1;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+                l1 = this.adjacentTreeBlocks[k1 * j1 + k1 * b1 + k1];
+
+                if (l1 >= 0) {
+
+                } else {
+                    this.removeLeaves(w, x, y, z);
+                }
+            }
+        }
+    }
+
+    private void removeLeaves(World w, int x, int y, int z) {
+        this.dropBlockAsItem(w, x, y, z, w.getBlockMetadata(x, y, z), 0);
+        w.setBlockToAir(x, y, z);
+    }
 
     @Override
     public void randomDisplayTick(World world, int x, int y, int z, Random rand) {
+        super.randomDisplayTick(world, x, y, z, rand);
         //TODO particles
     }
 
     @Override
     public void beginLeavesDecay(World world, int x, int y, int z) {
-        world.setBlockMetadataWithNotify(x, y, z, world.getBlockMetadata(x, y, z), 4);
+        // Nada
     }
 
     @Override
